--- a/package.json
+++ b/package.json
@@ -227,6 +227,7 @@
     "minizlib": "^2.1.2",
     "mkdirp": "^1.0.4",
     "mkdirp-classic": "^0.5.3",
+    "mocha": "^9.1.3",
     "ms": "^2.0.0",
     "mute-stream": "^0.0.8",
     "nanoid": "^3.1.25",
