--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "@babel/register": "^7.16.0",
-    "@wdio/allure-reporter": "^7.16.10",
+    "@wdio/allure-reporter": "^7.16.13",
     "@wdio/cli": "^7.16.10",
-    "@wdio/local-runner": "^7.16.10",
-    "@wdio/mocha-framework": "^7.16.6",
-    "@wdio/spec-reporter": "^7.16.9",
+    "@wdio/devtools-service": "^7.16.13",
+    "@wdio/local-runner": "^7.16.13",
+    "@wdio/mocha-framework": "^7.16.13",
+    "@wdio/spec-reporter": "^7.16.13",
     "allure-commandline": "^2.13.8",
     "chai": "^4.3.4",
     "chromedriver": "^97.0.0",
     "geckodriver": "^2.0.4",
     "msedgedriver": "^91.0.0",
-    "wdio-chromedriver-service": "^7.2.2",
+    "wdio-chromedriver-service": "^7.2.6",
     "wdio-edgedriver-service": "^1.2.0",
     "wdio-geckodriver-service": "^2.0.3",
     "wdio-intercept-service": "^4.2.1"
